syntax = "proto3";

package fatima.message.v1;
option go_package = ".;fatima_message_v1";

service FatimaMessageService {
  rpc SendFatimaMessage(SendFatimaMessageRequest) returns (SendFatimaMessageResponse)  {}
}

message SendFatimaMessageRequest {
  string  jsonString = 1;
}

message SendFatimaMessageResponse {
  oneof response {
    ResponseSuccess success = 1;
    ResponseError	error = 2;
  }
}

message ResponseSuccess {
}

message ResponseError {
  enum GrpcResponse {
    UNIVERSAL = 0;
    BAD_PARAMETER = 400;
    UNAUTORIZED = 401;
    FORBIDDEN = 403;
    NOT_FOUND = 404;
    NOT_ACCEPTABLE = 406;
    SERVER_ERROR = 500;
    SERVICE_UNAVAILABLE = 503;
  }
  enum ErrorCode {
    SUCCESS = 0;
    NO_RECORD = 100;
    ERROR_RESPONSE = 101;
    CONNECT_FAIL = 102;
    ERROR_ETC = 103;
  }
  GrpcResponse grpcResponse = 1;
  ErrorCode code = 2;
  string  value = 3;
  string  desc = 4;
}
